# sta-to-csv

./: .gitignore  CMakeLists.txt  README.md  make-deb.sh
cli/: CMakeLists.txt
cli/resources/: filters.json
cli/src/: main.cpp
deb/DEBIAN/: control
deb/debian/: changelog  control  postinst
deb/usr/share/doc/pkg/: copyright
debian/: changelog  control  postrm  preinst  prerm  rules
gui/: CMakeLists.txt
gui/include/: sta_to_csv_dialog.h
gui/src/: main.cpp  sta_to_csv_dialog.cpp  sta_to_csv_dialog.ui
gui/ui/: main.ui
include/: fields.h  sta-filter.h  sta-parser.h  sta-register.h
libsta/: CMakeLists.txt
libsta/include/: sta-converter.h  sta-filter.h  sta-parser.h
libsta/src/: sta-filter.cpp  sta-parser.cpp
src/: fields.cpp  main.cpp  sta-converter.cpp  sta-filter.cpp  sta-parser.cpp  sta-register.cpp
test/: CMakeLists.txt  main-test.cpp
test/fixtures/: common.ref  common.txt
test/resources/: data.txt  ref.txt
